--- a/config/qihoo_360v6/qihoo_360v6_basic.config
+++ b/config/qihoo_360v6/qihoo_360v6_basic.config
@@ -202,6 +202,8 @@ CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-app-argon-config=y
+CONFIG_PACKAGE_luci-theme-argonv3=y
 # CONFIG_PACKAGE_luci-theme-neobird is not set
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_miniupnpd=y
