--- a/.github/workflows/redmi_ax6_wifi.yml
+++ b/.github/workflows/redmi_ax6_wifi.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/sdf8057/lede.git
-  REPO_BRANCH: wifi
+  REPO_URL: https://github.com/coolsnowwolf/lede.git
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ./config/redmi_ax6/redmi_ax6_wifi.config
   DIY_P1_SH: ./custom/redmi_ax6/wifi/diy-part1.sh
